# -CRUD-FastAPI-with-MongoDB

./: .gitignore  README.md  main.py  pyproject.toml  routes.py
models/: playerModels.py
poetry/: pyproject.toml
